--- a/view/community/mainCommunity.html
+++ b/view/community/mainCommunity.html
@@ -167,13 +167,13 @@
                     <div class="carousel-inner" style="border-radius: 20px;">
 
                         <div class="carousel-item active"><img class="w-100 d-block"
-                                src="../../assets/img/978a6658c39f5857b77d5af8f27e13d3.jpg" alt="Slide Image"
+                                src="../../assets/img/160706703783174685.webp" alt="Slide Image"
                                 style="height: 500px;object-fit: cover;"></div>
 
                         <div class="carousel-item"><img class="w-100 d-block" src="../../assets/img/222.jpg" alt="Slide Image"
                                 style="height: 500px;object-fit: cover;"></div>
 
-                        <div class="carousel-item"><img class="w-100 d-block" src="../../assets/img/333.jpg" alt="Slide Image"
+                        <div class="carousel-item"><img class="w-100 d-block" src="../../assets/img/다운로드 (2).jfif" alt="Slide Image"
                                 style="height: 500px;object-fit: cover;"></div>
 
                     </div>
