--- a/view/store/storeDetail.html
+++ b/view/store/storeDetail.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="../../assets/img/wanza-Icon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../../css/style.css">
 
     <title>완벽한 자취생활, 완자</title>
     <style>
