--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -114,8 +114,8 @@
     }
     /* 검색창 */
     #headerSearch{
-        height: 52px; width: 50%;
-        padding: 0 0 0 7px;
+        height: 52px; width: 52%;
+        padding: 0 10px 0 7px;
         border: none;
         border-bottom: solid 2px rgb(75,75,75);
         font-family: 'Noto Sans KR', sans-serif;
@@ -124,6 +124,9 @@
     #headerSearch:focus{
         border-bottom-left-radius: 7px;
         border-bottom-right-radius: 7px;
+    }
+    #goLogin:focus{
+        box-shadow: none;
     }
     #goLogin{
         display: flex;
