--- a/view/admin/mainAdmin.html
+++ b/view/admin/mainAdmin.html
@@ -243,7 +243,7 @@ body{
                             <span class="b_title"> <span id="bang_2" style="color: red; font-size: 18px;">! </span><span id="weekRegi">0</span>명 / <span id="totalRegi">0</span>명</span>
                         </div>
                         <div class="box_footer">
-                            <a href="store-addProduct.html"><i class="fas fa-scroll"></i> 자세히 보기</a>
+                            <a href="community-userManage.html"><i class="fas fa-scroll"></i> 자세히 보기</a>
                         </div>
                     </div>
                 </div>
