--- a/view/community/storyDetail.html
+++ b/view/community/storyDetail.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="../../assets/img/wanza-Icon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../../css/style.css">
     <style>
         a:link {text-decoration:none; color:black;}
         a:visited {text-decoration:none; color:black;}
@@ -379,6 +380,10 @@
         // 신고하기 버튼 클릭
         $("#goAdmin").click(function(){
 
+            if(sessionId == "") {
+                alert('로그인이 필요한 기능입니다.');
+                return;
+            }
             alert("신고가 접수 되었습니다.");
 
             $.ajax({
