--- a/view/login/regi.html
+++ b/view/login/regi.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>완벽한 자취생활, 완자 - 회원가입</title>
     <script src="../../js/includeHTML.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/style.css">
 </head>
 <style>
     
