--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -316,6 +316,15 @@
             </div>
         </div>
     </div>
+    <div
+        id="kakao-talk-channel-chat-button"
+        data-channel-public-id="_Cxjlss"
+        data-title="question"
+        data-size="small"
+        data-color="yellow"
+        data-shape="pc"
+        data-support-multiple-densities="true"
+    ></div>
     <a id="backToTop"></a>
     <script src="../../assets/js/jquery.min.js"></script>
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
