--- a/view/login/login.html
+++ b/view/login/login.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
     <!-- 카카오 로그인 API -->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/style.css">
     <style>
         #facebook .plugin {
             line-height: 3.5 !important;
