--- a/view/login/regiAf.html
+++ b/view/login/regiAf.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="../../assets/img/wanza-Icon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="../../css/style.css">
     <title>완벽한 자취생활, 완자 - 회원가입</title>
 </head>
 
